--- a/backstage/component.yaml
+++ b/backstage/component.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dice-roller-component
   description: Sonder dice-roller Component.
   annotations:
-    'backstage.io/kubernetes-id': dice-roller
+    backstage.io/kubernetes-id: dice-roller
 spec:
   type: website
   owner: platform@sonder.com
