--- a/backstage/identity.yaml
+++ b/backstage/identity.yaml
@@ -4,7 +4,7 @@ metadata:
   name: identity
   description: Identity service.
   annotations:
-    'backstage.io/kubernetes-label-selector': "app.kubernetes.io/name: identity"
+    'backstage.io/kubernetes-label-selector': "app.kubernetes.io/name=identity"
 spec:
   type: service
   owner: platform@sonder.com
